fix searchbox overlap and add toggle div

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ li {
 	margin: 5px 0 0 auto;
 	padding: 0 11px 0 13px;
 	text-overflow: ellipsis;
-	width: 95vw;
+	width: 90vw;
 	z-index: 100;
 	top: 2%;
 	display: inline-block;
